<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_edit_user">Edit User</string>
    <string name="action_edit_package">Edit Package</string>
    <string name="action_edit_cow">Edit Cow</string>
    <string name="heading_main_user">User</string>
    <string name="package_name">Package Name</string>
    <string name="package_location">Package Location</string>
    <string name="package_type">Package Type</string>
    <string name="package_message_successfully_saved">Package Saved Successfully</string>
    <string name="package_add">New Package</string>
    <string name="package_edit">Edit Package</string>
    <string name="switch_active">Active</string>
    <string name="cow_hint_ear_tag">Ear Tag</string>
    <string name="cow_hint_weight">Weight</string>
    <string name="cow_hint_date">Date</string>
    <string name="cow_message_successfully_saved">Cow Saved Successfully</string>
    <string name="cow_add">New Cow</string>
    <string name="cow_edit">Edit Cow</string>
    <string name="progress_add">New Progress</string>
    <string name="progress_edit">Edit Progress</string>
    <string name="progress_message_successfully_saved">Progress Saved Successfully</string>
    <string-array name="sex_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
